--- a/css/styles.css
+++ b/css/styles.css
@@ -50,32 +50,35 @@ margin-left: 28%;
 }
 .happy{
   height: 159px;
-  background-color: green;
+  background-color: #fff;
 }
 .breakfast{
   height: 188px;
   background: url(../assets/foodtop/breakfast.jpg) no-repeat center;
   background-size: cover;
-  opacity: 0.9;
+  opacity: 1.0;
+}
+.breakfast:hover, .lunch:hover, .dinner:hover{
+  opacity: 0.8;
 }
 .lunch{
   height: 188px;
   background: url(../assets/foodtop/lunch.jpg) no-repeat center;
   background-size: cover;
-  opacity: 0.9;
+  opacity: 1.0;
 }
 .dinner{
   height: 188px;
   background: url(../assets/foodtop/dinner.jpg) no-repeat center;
-  opacity: 0.9;
+  opacity: 1.0;
 }
 .happy-hour{
-  height: 94px;
+  height: 50%;
   background-color: #fff;
 }
 .party-time{
   height:94px;
-  background-color: orange;
+  background-color: #F15A29;
 }
 .cols1text{
   text-align: center;
@@ -226,4 +229,110 @@ width: 240px;
   padding-top: 10px;
   font-size: 16px;
   font-weight: bold;
+}
+.customerscontainer{
+  height: 450px;
+  background-color: #fff;
+  overflow: auto;
+}
+.customers{
+  background-color: #fff;
+  margin-left: 8%;
+  margin-top: 8%;
+  height: 220px;
+  width: 85%;
+  box-shadow: 2px 2px 2px 2px grey;
+}
+.customerscol1{
+  background-color: #fff;
+  height: 220px;
+
+}
+.customerscol2{
+  background-color: #fff;
+  height: 220px;
+}
+.customersh2, .customersh3, .customersp{
+  text-align: center;
+}
+.customersp{
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 15px;
+}
+.customersh3{
+  font-size: 16px;
+}
+.customerpics{
+  height: 65px;
+  background-color: green;
+}
+.cpic1, .cpic2, .cpic3{
+  height: 40px;
+  width: 30%;
+  background-color: yellow;
+}
+.footer1{
+  height: 270px;
+  background: url(../assets/backgrounds/subscribe.jpg) no-repeat center center;
+  overflow: auto;
+}
+.footerheader{
+  margin-left: 25%;
+  margin-top: 7%;
+}
+#footertext1{
+  color: #fff;
+}
+.buttonfootform{
+  height: 50px;
+  width: 200px;
+  background-color: #f15a29;
+  margin-top: 0px;
+  color: #fff;
+  font-size: 20px;
+}
+.mailcenter{
+  margin-left: 30%;
+}
+.form-horizontal{
+  margin-left: 350px;
+  margin-top: 30px;
+}
+.formcenter{
+  height: 50px;
+  opacity: 0.6;
+  color: green;
+}
+.formmail{
+  height: 50px;
+}
+.mainfooter{
+  height: 300px;
+  background-color: #f15a29;
+  overflow: hidden;
+}
+.footercontainer{
+  height: 250px;
+  width: 300px;
+  margin-left: 40%;
+  margin-top: 20px;
+
+}
+#menufooter{
+  display: inline;
+  margin-left: 20px;
+  font-size: 35px;
+  margin-top: 15px;
+  color: #fff;
+  text-align: center;
+}
+#textfooter, #signfooter{
+  font-size: 16px;
+  color: #fff;
+  text-align: justify;
+  letter-spacing: 1.7px;
+}
+.footerlogos{
+
 }
